helm/infrastructure/ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: infrastructure
  labels:
    # istio-injection: enabled
