helm/infrastructure/vault.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: infrastructure
  name: vault
  labels:
    app: vault
spec:
  replicas: 1
  selector:
    matchLabels:
      app: vault
  template:
    metadata:
      labels:
        app: vault
    spec:
      containers:
        - name: vault
          image: hashicorp/vault:1.19
          ports:
            - containerPort: 8200
          args:
            - "server"
            - "-dev"
          securityContext:
            capabilities:
              add:
                - IPC_LOCK
---
apiVersion: v1
kind: Service
metadata:
  namespace: infrastructure
  name: vault
spec:
  selector:
    app: vault
  ports:
    - protocol: TCP
      port: 8200
      targetPort: 8200
  type: ClusterIP
