helm/infrastructure/ing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-nginx
  namespace: infrastructure
spec:
  ingressClassName: nginx
  rules:
  - host: "vault.local"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: vault
            port:
              number: 8200
